--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 	<head>
 
 		<script src="src/slider.js"></script>
+		
 
 	</head>
 
 	<body>
 
-		test
-
+		<div id='test'></div>
+		<script src="src/app.js"></script>
+		
 	</body>
 
 </html>
