--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 	<head>
 
+		<link rel="stylesheet" href="css/main.css">
 		<script src="src/slider.js"></script>
-		
 
 	</head>
 
@@ -12,7 +12,7 @@
 
 		<div id='test'></div>
 		<script src="src/app.js"></script>
-		
+
 	</body>
 
 </html>
