--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 	<head>
 
 		<link rel="stylesheet" href="css/main.css">
+		<script src="src/polyfills.js"></script>
 		<script src="src/slider.js"></script>
+		<script src="src/color_picker.js"></script>
 
 	</head>
 
 	<body>
 
-		<div id='test'></div>
+		<div class='wrapper'>
+
+			<div id='test'></div>
+			
+		</div>
+
 		<script src="src/app.js"></script>
 
 	</body>
