--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 
+		<meta name="viewport" content="user-scalable=no, initial-scale=1.0">
 		<link rel="stylesheet" href="css/main.css">
 		<script src="src/polyfills.js"></script>
 		<script src="src/slider.js"></script>
@@ -15,7 +16,7 @@
 		<div class='wrapper'>
 
 			<div id='test'></div>
-			
+
 		</div>
 
 		<script src="src/app.js"></script>
